fixed styling issues with the footer spacing

--- a/src/sass/globals/_footer.scss
+++ b/src/sass/globals/_footer.scss
@@ -2,10 +2,7 @@ footer {
     background-color: white;
     color: #000;
 
-    .bottom-wrapper {
-        padding: 0;
-        padding-block: 1em;
-    }
+    
 
     .social-links {
         display: flex;
