--- a/src/sass/globals/_queries.scss
+++ b/src/sass/globals/_queries.scss
@@ -6,9 +6,9 @@
     }
 
     footer {
-        padding-inline: 3em;
+        padding-inline: 0;
 
-        .wrapper {
+        .bottom-wrapper {
             padding-inline: 1.5em;
         }
     }
